--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
 
 
             </nav>
-            <div class="row flex justify-between items-center  px-28 py-5">
+            <div class="row flex md:flex-row flex-col justify-between items-center  md:px-28 md:py-5">
                 <div class="flex flex-col justify-start items-start gap-8">
-                    <h1 class="font-semibold text-6xl leading-normal w-96" style="width: 620px;height: 166px;">Learn UI Design From The Real Expert</h1>
-                    <p class="font-normal text-base leading-8 w-96" style="width: 432px;height: 60px;color: #9B948E;">Stop wasting time browsing around and start learning from our designers for your better career</p>
-                    <button class="rounded-md  px-4 py-5 bg-[#96C67F] border-black">Get Started</button>
+                    <h1 class="font-semibold text-6xl leading-normal flex justify-center sm:ml-10 ml-32 w-72 sm:w-96 md:w-[620px] md:ml-0">Learn UI Design From The Real Expert</h1>
+                    <p class="font-normal text-base leading-8 flex justify-center sm:ml-10 ml-32 w-72 sm:w-96 md:w-[432px] md:ml-0 ">Stop wasting time browsing around and start learning from our designers for your better career</p>
+                    <button class="rounded-md  px-4 py-5 bg-[#96C67F] border-black flex justify-center sm:ml-10  ml-32  w-[142px] md:ml-0">Get Started</button>
                 </div>
                 <div class="relative">
-                    <img src="./images/Group 5.svg" alt="">
-                    <img src="./images/Group 6.svg" alt="" class="absolute top-[400px] left-2">
-                    <img src="./images/Group 7.svg" alt="" class="absolute top-52 left-[460px]">
+                    <img src="./images/Group 5.svg" alt="" class="mt-12 mt:mt-0">
+                    <div class="absolute_imf">
+                        <img src="./images/Group 6.svg" alt="" class="absolute top-[330px] sm:absolute sm:top-[410px] sm:left-590px md:absolute top-[400px] left-2">
+                        <img src="./images/Group 7.svg" alt="" class="absolute top-[170px] sm:absolute sm:top-[170px] sm:left-[460px] md:absolute top-52 left-[460px]">
+                    </div>
                 </div>
             </div>
         </div>
@@ -66,11 +68,11 @@
     <main>
         <section>
             <div class="container">
-                <div class="all-company-about flex flex-col justify-center items-center mt-24 gap-8">
+                <div class="all-company-about flex flex-col justify-center items-center mt-60  gap-8 md:mt-24">
                     <div class="global-company-desc">
                         <h5>Trusted by Global Companies</h5>
                     </div>
-                    <div class="global-company-img flex gap-[60px]">
+                    <div class="global-company-img flex md:flex-row flex-col gap-[60px]">
                         <img src="./images/apple-11 1.svg" alt="">
                         <img src="./images/Group 13.svg" alt="">
                         <img src="./images/slack-2 1.svg" alt="">
@@ -86,7 +88,7 @@
                         <h3>Start Your Career</h3>
                     </div>
                 </div>
-                <div class="all-cards grid grid-cols-4 gap-4 px-[120px] py-20">
+                <div class="all-cards grid  md:grid-cols-4 sm:grid-cols-1 gap-4 px-[120px] py-20">
                     <div class="cards  rounded-lg flex flex-col shadow-md border border-gray-100 transition-all hover:scale-105">
                         <div class="cards-each  w-full h-full">
                             <img src="./images/image 1.png" alt="" class="w-full h-full"></div>
